19990522-15:10 CET Eddie Runia
  * include/test.ch
    added
  * source/rtl/environ.c
    Crash resolved for C++ Builder
  * tests/working/testtok.prg
    set exact added

19990522-14:40 CET Eddie Runia
  * tests/working/*.bat
    -i..\..\include added

19990522-14:10 CET Eddie Runia
  Change from 11:43 committed
  * tests/broken/instr.prg
    removed
  * include/hbsetup.h
    #define HARBOUR_START_PROGRAM temporarily commented out, because of errors

19990522-11:43 CET Eddie Runia
  * source/vm/hvm.c
    pItem bug in add changed
    Instring operator added
    'unreleased memory block' only get shown if memory block remain open
  * tests/working/instr.prg
    test program for instring added
  * tests/working/runner.c
    'Loading' messages removed
  * source/compiler/harbour.y
    'Debug' messages removed.

19990521-21:45 CET Eddie Runia
  * tests/broken/instr.prg added. Contribution from Les Griffiths.
    formerly known as strcomp
  * source/rtl/transfrm.c.
    Serious error code error
  * source/rtl/classes.c
    Error code added
  * source/vm/hvm.c
    Additional operator overloads added.

19990520-20:07 EST David G. Holm <dholm@jsd-llc.com>
  Thanks go to "Victor Szel" <info@szelvesz.hu> again!
  * source/rtl/strings.c
    - VAL sets the number of integer digits and decimal places for the result

19990520-19:35 EST David G. Holm <dholm@jsd-llc.com>
  Thanks go to "Victor Szel" <info@szelvesz.hu>
  * source/compiler/harbour.l
    - Saves number of decimal places in double constants
  * source/compiler/harbour.y
    - Includes number of decimal places when creating pcode for _PUSHDOUBLE
  * source/vm/hvm.c
    - Pcode for _PUSHDOUBLE extracts number of decimal places

Thu May 20 16:03:24 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* source/rtl/dates.c: 
	Nasty bug: using '&' instead of '&&'.
	
	* config/header.cf: 
	* include/Makefile: 
	* Makefile: 
	Added rules to deal with include files (they are just installed