@@ -1,3 +1,7 @@
+19990522-15:35 CET Eddie Runia
+  * tests/working/instr.prg, source/vm/hvm.c
+    Les Griffiths patch inserted
+
 19990522-15:10 CET Eddie Runia
   * include/test.ch
     added
